--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#b5cfe3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorTitle">#444241</color>
+    <color name="colorTitleBtn">#206673</color>
+    <color name="colorAqua">#a1e6b8</color>
+
+
 </resources>
