--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="colorTitle">#444241</color>
     <color name="colorTitleBtn">#206673</color>
     <color name="colorAqua">#a1e6b8</color>
-
+    <color name="colorTilda">#d7d7d7</color>
 
 </resources>
