--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp">
 
+    <!-- Main Title -->
     <RelativeLayout
         android:id="@+id/mainTitle_layout"
         android:layout_width="match_parent"
@@ -23,14 +24,14 @@
             android:textSize="40sp">
         </TextView>
     </RelativeLayout>
-
+    <!-- Hosts Title -->
     <RelativeLayout
         android:id="@+id/hostsTitle_layout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorPrimaryDark"
         android:layout_below="@id/mainTitle_layout"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="15dp">
         <TextView
             android:id="@+id/hosts_tv"
             android:layout_centerVertical="true"
@@ -52,7 +53,7 @@
             android:textSize="18sp"
             android:background="@android:color/transparent"/>
     </RelativeLayout>
-
+    <!-- List of Hosts  -->
     <HorizontalScrollView
         android:id="@+id/hosts_hs"
         android:layout_width="match_parent"
@@ -61,7 +62,7 @@
         android:layout_below="@id/hostsTitle_layout"
         android:layout_marginTop="3dp">
         <GridLayout
-            android:id="@+id/hosts_gl"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -69,7 +70,7 @@
             android:rowCount="3">
 
             <Button
-                android:id="@+id/user_sample1"
+
                 android:background="@drawable/people1"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -77,7 +78,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample2"
+
                 android:background="@drawable/people2"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -85,7 +86,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample4"
+
                 android:background="@drawable/people4"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -93,7 +94,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample3"
+
                 android:background="@drawable/people3"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -101,7 +102,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample5"
+
                 android:background="@drawable/people5"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -109,7 +110,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample6"
+
                 android:background="@drawable/people6"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -117,7 +118,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample7"
+
                 android:background="@drawable/people7"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -125,7 +126,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample8"
+
                 android:background="@drawable/people8"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -133,7 +134,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample9"
+
                 android:background="@drawable/people9"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -141,7 +142,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample10"
+
                 android:background="@drawable/people10"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -150,7 +151,7 @@
             </Button>
 
             <Button
-                android:id="@+id/user_sample11"
+
                 android:background="@drawable/people11"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -158,7 +159,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample12"
+
                 android:background="@drawable/people12"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -166,7 +167,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample13"
+
                 android:background="@drawable/people13"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -174,7 +175,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample14"
+
                 android:background="@drawable/people14"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -182,7 +183,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample15"
+
                 android:background="@drawable/people15"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -190,7 +191,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample16"
+
                 android:background="@drawable/people16"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -198,7 +199,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample17"
+
                 android:background="@drawable/people17"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -206,7 +207,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample18"
+
                 android:background="@drawable/people18"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -214,7 +215,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample19"
+
                 android:background="@drawable/people19"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -222,7 +223,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample20"
+
                 android:background="@drawable/people20"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -230,7 +231,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample21"
+
                 android:background="@drawable/people21"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -238,7 +239,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample22"
+
                 android:background="@drawable/people22"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -246,7 +247,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample23"
+
                 android:background="@drawable/people23"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -254,7 +255,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample24"
+
                 android:background="@drawable/people24"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -262,7 +263,7 @@
                 android:layout_marginStart="5dp">
             </Button>
             <Button
-                android:id="@+id/user_sample25"
+
                 android:background="@drawable/people25"
                 android:layout_width="70dp"
                 android:layout_height="60dp"
@@ -279,9 +280,9 @@
 
         </GridLayout>
     </HorizontalScrollView>
-
+    <!--Tilda -->
     <TextView
-        android:id="@+id/gfd"
+        android:id="@+id/tilda1"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
@@ -290,12 +291,202 @@
         android:text="~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~"
         android:textColor="@color/colorTilda"
         android:textSize="17sp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:layout_below="@id/hosts_hs"
         android:textStyle="bold">
     </TextView>
+    <!-- Travellers Title -->
+    <RelativeLayout
+        android:id="@+id/travellersTitle_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorPrimaryDark"
+        android:layout_below="@id/tilda1"
+        android:layout_marginTop="15dp">
+        <TextView
+            android:id="@+id/travellers_tv"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/travellers_title"
+            android:textColor="@color/colorTitle"
+            android:textSize="20sp"
+            android:textStyle="bold">
+        </TextView>
+        <Button
+            android:id="@+id/travellers_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:text="@string/viewAll"
+            android:textColor="@color/colorTitleBtn"
+            android:textSize="18sp"
+            android:background="@android:color/transparent"/>
+    </RelativeLayout>
+    <!-- List of Travellers  -->
+    <HorizontalScrollView
+        android:id="@+id/travellers_hs"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        android:background="@color/colorPrimaryDark"
+        android:layout_below="@id/travellersTitle_layout"
+        android:layout_marginTop="3dp">
+        <GridLayout
+            android:id="@+id/travellers_gl"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:columnCount="5"
+            android:rowCount="3">
+            <Button
 
+                android:background="@drawable/people8"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
 
+                android:background="@drawable/people9"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people10"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+
+            <Button
+
+                android:background="@drawable/people11"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people12"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people13"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people14"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people15"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people16"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people17"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people18"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people19"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people20"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people21"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people22"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people23"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people24"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+            <Button
+
+                android:background="@drawable/people25"
+                android:layout_width="70dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp">
+            </Button>
+
+        </GridLayout>
+    </HorizontalScrollView>
 
 
 
