--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="colorTitleBtn">#206673</color>
     <color name="colorAqua">#a1e6b8</color>
     <color name="colorTilda">#d7d7d7</color>
-
+    <color name="colorCard">#0a5766</color>
+    <color name="colorTitleCard">#fbfcfd</color>
+    <color name="colorBtnCard">#277275</color>
 </resources>
