--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sv"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -555,6 +556,62 @@
             android:background="@drawable/people8"/>
             </GridLayout>
         </HorizontalScrollView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_marginTop="30dp"
+            android:layout_below="@+id/bookmarked_hs"
+            app:cardBackgroundColor="@color/colorCard">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/titleCard_tv"
+                        android:layout_width="230dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="25dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/invites_title"
+                        android:textColor="@color/colorTitleCard"
+                        android:textSize="50sp"
+                        android:textStyle="bold">
+                    </TextView>
+                    <TextView
+                        android:id="@+id/bodyCard_tv"
+                        android:layout_width="450dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_height="wrap_content"
+                        android:text="@string/invites_body"
+                        android:layout_below="@id/titleCard_tv"
+                        android:layout_marginTop="40dp"
+                        android:textColor="@color/colorTitleCard"
+                        android:textSize="25sp"
+                        android:gravity="center">
+                    </TextView>
+                <Button
+                    android:id="@+id/btnCarh_btn"
+                    android:layout_width="400dp"
+                    android:layout_height="70dp"
+                    android:layout_below="@id/bodyCard_tv"
+                    android:layout_marginTop="40dp"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="27sp"
+                    android:text="@string/invites_btn"
+                    android:textColor="@color/colorBtnCard"
+                    android:background="@color/colorAqua"/>
+
+            </RelativeLayout>
+<!--            <TextView-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:text="@string/invites_title"-->
+<!--                android:textSize="30sp">-->
+
+<!--            </TextView>-->
+        </androidx.cardview.widget.CardView>
+
 
     </RelativeLayout>
 </ScrollView>
