--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -575,25 +575,29 @@
                         android:layout_height="wrap_content"
                         android:text="@string/invites_title"
                         android:textColor="@color/colorTitleCard"
-                        android:textSize="50sp"
+                        android:textSize="47sp"
                         android:textStyle="bold">
                     </TextView>
                     <TextView
                         android:id="@+id/bodyCard_tv"
-                        android:layout_width="450dp"
+                        android:layout_width="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
                         android:layout_centerHorizontal="true"
                         android:layout_height="wrap_content"
                         android:text="@string/invites_body"
                         android:layout_below="@id/titleCard_tv"
                         android:layout_marginTop="40dp"
                         android:textColor="@color/colorTitleCard"
-                        android:textSize="25sp"
+                        android:textSize="19sp"
                         android:gravity="center">
                     </TextView>
                 <Button
                     android:id="@+id/btnCarh_btn"
-                    android:layout_width="400dp"
-                    android:layout_height="70dp"
+                    android:layout_width="wrap_content"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="50dp"
+                    android:layout_height="60dp"
                     android:layout_below="@id/bodyCard_tv"
                     android:layout_marginTop="40dp"
                     android:layout_centerHorizontal="true"
