--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_main1"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/sv"
@@ -557,7 +563,7 @@
             </GridLayout>
         </HorizontalScrollView>
         <androidx.cardview.widget.CardView
-            android:id="@+id/cv"
+            android:id="@+id/card_cv"
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:layout_marginTop="30dp"
@@ -617,5 +623,17 @@
         </androidx.cardview.widget.CardView>
 
 
+
+
+
     </RelativeLayout>
 </ScrollView>
+    <LinearLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:background="@color/colorAqua"/>
+
+</RelativeLayout>
