--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -667,53 +667,63 @@
 
             <Button
                 android:id="@+id/menu_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="45dp"
-                android:background="@drawable/menu37"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/ic_menu1"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/button3"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_editor_absoluteX="10dp" />
 
             <Button
                 android:id="@+id/button3"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/menu_btn"
-                android:background="@drawable/bag37"
+                android:background="@drawable/ic_bookmark"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/button4"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/menu_btn"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_editor_absoluteX="50dp" />
 
             <Button
                 android:id="@+id/button4"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@id/user_btn"
-                android:background="@drawable/msg37"
+                android:background="@drawable/ic_messenger"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/user_btn"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/button3"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_editor_absoluteX="100dp" />
+
 
             <Button
                 android:id="@+id/user_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="45dp"
-                android:background="@drawable/user37"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/ic_user"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/button4"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_editor_absoluteX="120dp" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
